# annual_stats

./: LICENSE.md  README.md  main.py  pyproject.toml  table.txt
