[tool.poetry]
name = "annual-stats"
version = "0.1.0"
description = "Annual Statistics for a zettelkasten. The Archive"
authors = ["Will Simpson <will@kestrelcreek.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "annual_stats"}]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
